# Mesh-complexity-reduction

./: CMakeLists.txt  DisparityMap.cpp  DisparityMap.h  MeshReduction.cpp  MeshReduction.h  Triangulation.cpp  Triangulation.h  Visualisation.cpp  Visualisation.h  main.cpp
